--- a/pom.xml
+++ b/pom.xml
@@ -5,21 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ua.lviv.navpil</groupId>
-    <artifactId>test-apps</artifactId>
-    <version>1.0</version>
+    <artifactId>applicatia-minora</artifactId>
+    <version>1.1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <build>
         <plugins>
@@ -33,6 +24,21 @@
                 </configuration>
             </plugin>
         </plugins>
-
     </build>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.23.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
